@@ -1,3 +1,6 @@
+2490.	[port]		aix: work around a kernel bug where IPV6_RECVPKTINFO
+			is cleared when IPV6_V6ONLY is set. [RT #18785]
+
 2489.	[port]		solaris: Workaround Solaris's kernel bug about
 			/dev/poll:
 			http://bugs.opensolaris.org/view_bug.do?bug_id=6724237
